--- a/angular.json
+++ b/angular.json
@@ -64,6 +64,9 @@
         },
         "serve": {
           "builder": "@angular/build:dev-server",
+          "options": {
+            "proxyConfig": "src/proxy.json"
+          },
           "configurations": {
             "production": {
               "buildTarget": "frontend:build:production"
@@ -80,6 +83,7 @@
         "test": {
           "builder": "@angular/build:karma",
           "options": {
+
             "polyfills": [
               "zone.js",
               "zone.js/testing"
